--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "displayName": "platformio_big_buttons",
   "description": "",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/SeryiBaran/platformio-big-buttons"
+  },
   "engines": {
     "vscode": "^1.85.0"
   },
