--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "VSCode extension that adds large buttons for building, uploading, etc. for PlatformIO.",
   "version": "1.0.3",
   "publisher": "SeryiBaran",
+  "type": "module",
   "repository": {
     "url": "https://github.com/SeryiBaran/platformio-big-buttons"
   },
@@ -35,6 +36,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.4.5",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.85.0",
@@ -42,7 +44,8 @@
     "@typescript-eslint/parser": "^6.13.1",
     "@vscode/test-cli": "^0.0.4",
     "@vscode/test-electron": "^2.3.8",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.2"
   }
 }
