--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,8 @@
     "source.fixAll": "explicit"
   },
   "css.lint.unknownAtRules": "ignore",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "eslint.options": {
+    "overrideConfigFile": "eslint.config.mjs"
+  }
 }
