--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "platformio-big-buttons",
   "displayName": "PlatformIO Big Buttons",
   "description": "VSCode extension that adds large buttons for building, uploading, etc. for PlatformIO.",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "publisher": "SeryiBaran",
   "repository": {
     "url": "https://github.com/SeryiBaran/platformio-big-buttons"
@@ -27,24 +27,26 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run lint",
-    "lint": "ESLINT_USE_FLAT_CONFIG=trueeslint src --ext ts -c eslint.config.mjs",
-    "test": "vscode-test"
+    "vscode:prepublish": "pnpm run package",
+    "compile": "node ./esbuild.js",
+    "package": "NODE_ENV=production node ./esbuild.js",
+    "lint": "ESLINT_USE_FLAT_CONFIG=true eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts -c eslint.config.mjs",
+    "watch": "node ./esbuild.js --watch"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.5",
-    "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.85.0",
+    "@types/vscode-webview": "^1.57.4",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "@vscode/test-cli": "^0.0.4",
     "@vscode/test-electron": "^2.3.8",
+    "esbuild": "0.16.17",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@vscode/webview-ui-toolkit": "^1.4.0"
   }
 }
