--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "vscode:prepublish": "pnpm run package",
     "compile": "node ./esbuild.js",
-    "package": "NODE_ENV=production node ./esbuild.js",
+    "package": "cross-env NODE_ENV=production node ./esbuild.js",
     "lint": "ESLINT_USE_FLAT_CONFIG=true eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts -c eslint.config.mjs",
     "watch": "node ./esbuild.js --watch"
   },
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vscode/test-electron": "^2.3.8",
+    "cross-env": "^7.0.3",
     "esbuild": "0.16.17",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
