--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,21 @@
 {
   "compilerOptions": {
-    "module": "Node16",
     "target": "ES2022",
-    "outDir": "out",
-    "lib": ["ES2022", "DOM"],
-    "sourceMap": true,
+    "lib": [
+      "ES2022",
+      "DOM"
+    ],
     "rootDir": "src",
-    "strict": true /* enable all strict type-checking options */
+    "module": "Node16",
+    "strict": true,
+    "outDir": "out",
+    "sourceMap": true /* enable all strict type-checking options */
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
     // "noUnusedParameters": true,  /* Report errors on unused parameters. */
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
