--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "publisher": "SeryiBaran",
   "name": "platformio-big-buttons",
   "displayName": "PlatformIO Big Buttons",
-  "version": "1.1.6",
   "description": "VSCode extension that adds large buttons for building, uploading, etc. for PlatformIO.",
   "repository": {
     "url": "https://github.com/SeryiBaran/platformio-big-buttons"
   },
+  "version": "1.2.0",
+  "engines": {
+    "vscode": "^1.97.0"
+  },
   "categories": [
     "Other"
   ],
-  "main": "./out/extension.js",
-  "engines": {
-    "vscode": "^1.85.0"
-  },
   "activationEvents": [],
+  "main": "./dist/extension.js",
   "contributes": {
     "views": {
       "explorer": [
@@ -28,26 +28,34 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
-    "compile": "node ./esbuild.js",
-    "package": "cross-env NODE_ENV=production node ./esbuild.js",
-    "lint": "ESLINT_USE_FLAT_CONFIG=true eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts -c eslint.config.mjs",
-    "watch": "node ./esbuild.js"
-  },
-  "dependencies": {
-    "@vscode/webview-ui-toolkit": "^1.4.0"
+    "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
+    "check-types": "tsc --noEmit",
+    "lint": "eslint src",
+    "test": "vscode-test"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.5",
-    "@types/node": "18.x",
-    "@types/vscode": "^1.85.0",
-    "@types/vscode-webview": "^1.57.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vscode/test-electron": "^2.3.8",
-    "cross-env": "^7.0.3",
-    "esbuild": "0.16.17",
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.2"
+    "@types/mocha": "^10.0.10",
+    "@types/node": "20.x",
+    "@types/vscode": "^1.97.0",
+    "@types/vscode-webview": "^1.57.5",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.19.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@vscode-elements/elements": "^1.13.1",
+    "@vscode/webview-ui-toolkit": "^1.4.0"
   }
 }
