--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@vscode-elements/elements": "^1.13.1",
+    "@vscode/vsce": "^3.2.2",
     "@vscode/webview-ui-toolkit": "^1.4.0"
   }
 }
